--- a/SurveyEducation/Views/Shared/_Header.cshtml
+++ b/SurveyEducation/Views/Shared/_Header.cshtml
@@ -1,5 +1,5 @@
 ﻿<header class="navigation">
-    <div class="header-top ">
+    @*<div class="header-top ">
         <div class="container">
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-2 col-md-4">
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
     <nav class="navbar navbar-expand-lg  py-4" id="navbar">
         <div class="container">
             <a class="navbar-brand" href="index.html">
