--- a/SurveyEducation/Views/Shared/_Header.cshtml
+++ b/SurveyEducation/Views/Shared/_Header.cshtml
@@ -39,11 +39,11 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="/Home/Survey" aria-haspopup="true" aria-expanded="false">Blog</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="/Home/contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Home/Contact">Contact</a></li>
                 </ul>
 
                 <form class="form-lg-inline my-2 my-md-0 ml-lg-4 text-center">
-                    <a href="contact.html" class="btn btn-solid-border btn-round-full">Get a Quote</a>
+                    <a href="/Home/Contact" class="btn btn-solid-border btn-round-full">Get a Quote</a>
                 </form>
             </div>
         </div>
