--- a/SurveyEducation/Views/Home/Survey.cshtml
+++ b/SurveyEducation/Views/Home/Survey.cshtml
@@ -11,8 +11,8 @@
 
                         <div class="blog-item-content bg-white p-5">
                             <div class="blog-item-meta bg-gray py-1 px-2">
-                                @*<span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Creativity</span>
-                                    <span class="text-muted text-capitalize mr-3"><i class="ti-comment mr-2"></i>5 Comments</span>*@
+                                <span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Creativity</span>
+                                    <span class="text-muted text-capitalize mr-3"><i class="ti-comment mr-2"></i>5 Comments</span>
                                 <span class="text-black text-capitalize mr-3"><i class="ti-time mr-1"></i> @item.StartTime</span>
                                 <span class="text-black text-capitalize mr-3"><i class="ti-time mr-1"></i> @item.EndTime</span>
                             </div>
