--- a/SurveyEducation/Views/Shared/_Footer.cshtml
+++ b/SurveyEducation/Views/Shared/_Footer.cshtml
@@ -18,10 +18,10 @@
                     <h4 class="text-capitalize mb-4">Quick Links</h4>
 
                     <ul class="list-unstyled footer-menu lh-35">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="/Home/About">About</a></li>
+                        <li><a href="">Services</a></li>
+                        @*<li><a href="">Team</a></li>*@
+                        <li><a href="/Home/Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -30,10 +30,10 @@
                     <h4 class="text-capitalize mb-4">Subscribe Us</h4>
                     <p>Subscribe to get latest news article and resources  </p>
 
-                    <form action="#" class="sub-form">
+                    @*<form action="#" class="sub-form">
                         <input type="text" class="form-control mb-3" placeholder="Subscribe Now ...">
                         <a href="#" class="btn btn-main btn-small">subscribe</a>
-                    </form>
+                    </form>*@
                 </div>
             </div>
 
