--- a/SurveyEducation/Views/Home/Contact.cshtml
+++ b/SurveyEducation/Views/Home/Contact.cshtml
@@ -48,7 +48,7 @@
 
                 <div class="col-lg-5 col-sm-12">
                     <div class="contact-content pl-lg-5 mt-5 mt-lg-0">
-                        <span class="text-muted">Chngs tôi có thể giúp gì cho bạn? </span>
+                        <span class="text-muted">Chúng tôi có thể giúp gì cho bạn? </span>
                         <h2 class="mb-5 mt-2">hãy liên hệ với chúng tôi để được hỗ trợ thêm bất kỳ thông tin nào</h2>
 
                         <ul class="address-block list-unstyled">
