--- a/SurveyEducation/Views/Home/Index.cshtml
+++ b/SurveyEducation/Views/Home/Index.cshtml
@@ -123,42 +123,44 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="service-item mb-5">
                         <h4 class="mb-3">Môi trường xã hội </h4>
-                        <p>Statistics of optimal methods for environmental protection</p>
+                        <p>Nơi cung cấp tài nguyên cần thiết cho cuộc sống và hoạt động sản xuất của con người: môi trường xã hội sẽ bao gồm các yếu tố như: chính trị, kinh tế, văn hoá, thể thao, lịch sử, giáo dục… </p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="service-item mb-5">
                         <h4 class="mb-3">Môi trường tự nhiên </h4>
-                        <p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+                        <p>Là một môi trường bao gồm tất cả các sinh vật sống và không sống xuất hiện tự nhiên trên Trái Đất.</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="service-item mb-5">
                         <h4 class="mb-3">Môi trường trên cạn.</h4>
-                        <p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+                        <p>Là những được tìm thấy trên đất liền, như rừng, đồng cỏ, sa mạc, bờ biển và đất ngập nước. Môi trường sống trên cạn cũng bao gồm môi trường sống do con người tạo ra, như trang trại, thị trấn, thành phố và môi trường sống dưới mặt đất, như hang động và hầm mỏ.</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="service-item mb-5 mb-lg-0">
                         <h4 class="mb-3">Môi trường đất.</h4>
-                        <p>Là hiện tượng suy thoái của lớp đất trên bề mặt do rác thải và sự suy kiệt tài nguyên gây nên. Các hoạt động của con người chính là tác động lớn nhất gây nên ô nhiễm đất.</p>
+                        <p>Là là lớp ngoài cùng của thạch quyển. Đất bị biến đổi tự nhiên dưới tác động tổng hợp của các nhân tố khác trong môi trường đó là nước, không khí, sinh vật.</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="service-item mb-5 mb-lg-0">
                         <h4 class="mb-3">Môi trường nước .</h4>
-                        <p> Là ô nhiễm khi xuất hiện các chất lạ hoặc sự biến đổi tiêu cực của nước làm cho nguồn nước trở nên độc hại với sinh vật và con người. Ô nhiễm môi trường nước làm giảm độ đa dạng sinh vật và ảnh hưởng lớn đến sức khỏe con người.</p>
+                        <p> Là môi trường mà những cá thể tồn tại, sinh sống và tương tác qua lại đều bị ảnh hưởng và phụ thuộc vào nước. </p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="service-item mb-5 mb-lg-0">
-                        <h4 class="mb-3">môi trường không khí.</h4>
-                        <p>Là sự có mặt của một số chất lạ, chất bị biến đổi thành phần khiến cho không khí mất đi sự trong lành, gây nên mùi khó chịu và có thể gây hạn chế tầm nhìn của con người.</p>
+                        <h4 class="mb-3">Môi trường không khí.</h4>
+                        <p>
+                            Là hỗn hợp các khí bao bọc quanh trái đất có nhiệm vụ duy trì và bảo vệ sự sống trên toàn bộ bề mặt trái đất.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -322,8 +324,8 @@
             <div class="cta-block-2 bg-gray p-5 rounded border-1">
                 <div class="row justify-content-center align-items-center ">
                     <div class="col-lg-7">
-                        <span class="text-color">For Every type business</span>
-                        <h2 class="mt-2 mb-4 mb-lg-0">Entrust Your Project to Our Best Team of Professionals</h2>
+                        <span class="text-color">Chúng tôi có thể giúp gì cho bạn?</span>
+                        <h2 class="mt-2 mb-4 mb-lg-0">Hãy liên hệ với chúng tôi nếu cần sựu trợ giúp.</h2>
                     </div>
                     <div class="col-lg-4">
                         <a href="/Home/Contact" class="btn btn-main btn-round-full float-lg-right ">Contact Us</a>
