--- a/SurveyEducation/Views/Home/Survey.cshtml
+++ b/SurveyEducation/Views/Home/Survey.cshtml
@@ -25,46 +25,9 @@
                     </div>
                 </div>
             }
-
-            <div class="col-lg-6 col-md-6 mb-5">
-                <div class="blog-item">
-                    <img src="images/blog/3.jpg" alt="" class="img-fluid rounded">
-
-                    <div class="blog-item-content bg-white p-5">
-                        <div class="blog-item-meta bg-gray py-1 px-2">
-                            <span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Community</span>
-                            <span class="text-muted text-capitalize mr-3"><i class="ti-comment mr-2"></i>5 Comments</span>
-                            <span class="text-black text-capitalize mr-3"><i class="ti-time mr-1"></i> 28th January</span>
-                        </div>
-
-                        <h3 class="mt-3 mb-3"><a href="blog-single.html">Marketing Strategy to bring more affect</a></h3>
-                        <p class="mb-4">Non illo quas blanditiis repellendus laboriosam minima animi. Consectetur accusantium pariatur repudiandae!</p>
-
-                        <a href="blog-single.html" class="btn btn-small btn-main btn-round-full">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 mb-5">
-                <div class="blog-item">
-                    <img src="images/blog/4.jpg" alt="" class="img-fluid rounded">
-
-                    <div class="blog-item-content bg-white p-5">
-                        <div class="blog-item-meta bg-gray py-1 px-2">
-                            <span class="text-muted text-capitalize mr-3"><i class="ti-pencil-alt mr-2"></i>Marketing</span>
-                            <span class="text-muted text-capitalize mr-3"><i class="ti-comment mr-2"></i>5 Comments</span>
-                            <span class="text-black text-capitalize mr-3"><i class="ti-time mr-1"></i> 28th January</span>
-                        </div>
-
-                        <h3 class="mt-3 mb-3"><a href="blog-single.html">Marketing Strategy to bring more affect</a></h3>
-                        <p class="mb-4">Non illo quas blanditiis repellendus laboriosam minima animi. Consectetur accusantium pariatur repudiandae!</p>
-
-                        <a href="blog-single.html" class="btn btn-small btn-main btn-round-full">Learn More</a>
-                    </div>
-                </div>
-            </div>
         </div>
 
-        <div class="row justify-content-center mt-5">
+        @*<div class="row justify-content-center mt-5">
             <div class="col-lg-6 text-center">
                 <nav class="navigation pagination d-inline-block">
                     <div class="nav-links">
@@ -75,6 +38,6 @@
                     </div>
                 </nav>
             </div>
-        </div>
+        </div>*@
     </div>
 </section>
