--- a/SurveyEducation/Views/Home/Index.cshtml
+++ b/SurveyEducation/Views/Home/Index.cshtml
@@ -325,7 +325,7 @@
                 <div class="row justify-content-center align-items-center ">
                     <div class="col-lg-7">
                         <span class="text-color">Chúng tôi có thể giúp gì cho bạn?</span>
-                        <h2 class="mt-2 mb-4 mb-lg-0">Hãy liên hệ với chúng tôi nếu cần sựu trợ giúp.</h2>
+                        <h2 class="mt-2 mb-4 mb-lg-0">Hãy liên hệ với chúng tôi nếu cần sự trợ giúp.</h2>
                     </div>
                     <div class="col-lg-4">
                         <a href="/Home/Contact" class="btn btn-main btn-round-full float-lg-right ">Contact Us</a>
