--- a/SurveyEducation/Views/Shared/_NoHeaderLayout.cshtml
+++ b/SurveyEducation/Views/Shared/_NoHeaderLayout.cshtml
@@ -3,6 +3,16 @@
 @Html.Partial("_Head")
 
 <body>
+    @if (ViewBag.message != null)
+    {
+        if (ViewBag.message.Equals("Registered Successfully"))
+        {
+            <div class="alert alert-success">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <strong>Success!</strong> @ViewBag.message
+            </div>
+        }
+    }
 
     @RenderBody()
 
